# axum-webshell

./: Cargo.toml  LICENSE  README.md  build.rs
html/: package.json  pnpm-lock.yaml
html/src/: app.js  index.html
src/: handler.rs  main.rs
src/adapter/: local.rs  mod.rs
src/db/: mod.rs  schema.sql
src/db/migrations/: 20231014020521_create_users_table.sql
src/handler/: auth.rs  mod.rs
