[package]
name = "axum-webshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
axum-login = { version = "0.6.0", features = ["postgres"] }
futures-util = "0.3.28"
hyper = "0.14.27"
pty-process = { version = "0.4.0", features = ["async"] }
rand = "0.8.5"
serde = "1.0.189"
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }

[build-dependencies]
anyhow = "1.0.75"
